yle-dl (1.99.9-0+jackyf1~) UNRELEASED; urgency=low

  * New upstream release.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 13 Jun 2012 11:38:42 +0300

yle-dl (1.99.8-0+jackyf2) UNRELEASED; urgency=low

  * debian/control:
    - Switch to using OpenSSL by build-depending on libssl-dev.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 07 Jun 2012 14:26:36 +0300

yle-dl (1.99.8-0+jackyf1) UNRELEASED; urgency=low

  * New upstream release.
  * debian/control:
    - Depend on python-crypto as yle-dl script now requires it.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 07 Jun 2012 12:18:44 +0300

yle-dl (1.99.7-0+jackyf1) UNRELEASED; urgency=low

  * New release.
  * debian/rules:
    - Build and link librtmp statically as new README suggests.
    - Install only 'yle-dl' and 'rtmpdump' executables.
  * debian/control:
    - Changed source and main binary package names to 'yle-dl'.
    - More user-targeted short description.
    - Build-depend on debhelper >= 7.0.50~, because overrides are used.
    - Bumped Standards-Version to 3.9.3, no changes needed.
    - Build-depend on nettle instead of libgcrypt, as new rtmpdump seem to
      require it.
    - Don't build-depend on libjson0-dev anymore.
    - Build-depend on libltdl-dev.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 26 May 2012 14:39:44 +0300

rtmpdump-yle (1.4.6-0+jackyf1) UNRELEASED; urgency=low

  * New release.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 18 Jan 2012 21:25:32 +0200

rtmpdump-yle (1.4.2.jackyf1-0+jackyf1) UNRELEASED; urgency=low

  * New release

 -- Antti Ajanki <antti.ajanki@iki.fi>  Thu, 26 May 2011 19:57:15 +0300

rtmpdump-yle (1.4.1.jackyf1-0+jackyf1) UNRELEASED; urgency=low

  * New release

 -- Antti Ajanki <antti.ajanki@iki.fi>  Tue, 22 Feb 2011 19:36:53 +0200

rtmpdump-yle (1.4.0.jackyf1-0+jackyf1) UNRELEASED; urgency=low

  * New release.

 -- Antti Ajanki <antti.ajanki@iki.fi>  Wed, 09 Feb 2011 20:17:14 +0200
